# kde-fcstd-thumbnailer

./: .gitignore  CMakeLists.txt  README.md
src/: fcstdcreator.cpp  fcstdcreator.h  fcstdthumbnailer.desktop
